2023-07-17T01:50:43Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5570956608 # 996
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-17
* notice: last 14d: unq all: 16 59
* notice: prev accum: outdated-unq outdated-all / unq all: 520 833 / 563 899
* notice: next accum: outdated-unq outdated-all / unq all: 524 840 / 563 899
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-07-02] / []

2023-07-16T16:21:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5568656358 # 995
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-16
* notice: last 14d: unq all: 18 66
* notice: prev accum: outdated-unq outdated-all / unq all: 520 833 / 561 897
* notice: next accum: outdated-unq outdated-all / unq all: 520 833 / 563 899
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-07-16]

2023-07-16T01:57:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5565227145 # 993
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-16
* notice: last 14d: unq all: 18 64
* notice: prev accum: outdated-unq outdated-all / unq all: 520 833 / 561 896
* notice: next accum: outdated-unq outdated-all / unq all: 520 833 / 561 897
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-07-15]

2023-07-15T08:19:49Z: