@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-17T01:50:43Z",
+  "timestamp" : "2023-07-17T08:22:33Z",
   "count_outdated" : 840,
   "uniques_outdated" : 524,
-  "count" : 899,
-  "uniques" : 563,
+  "count" : 901,
+  "uniques" : 565,
   "clones" : [
     {
       "timestamp": "2023-07-03T00:00:00Z",
@@ -124,6 +124,15 @@
     },
     {
       "timestamp": "2023-07-16T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-07-17T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
