@@ -1,5 +1,5 @@
 {
-  "count": 59,
+  "count": 61,
   "uniques": 16,
   "clones": [
     {
@@ -69,6 +69,11 @@
     },
     {
       "timestamp": "2023-07-16T00:00:00Z",
+      "count": 2,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2023-07-17T00:00:00Z",
       "count": 2,
       "uniques": 2
     }
