@@ -1,3 +1,12 @@
+2023-07-17T08:22:33Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5573373815 # 997
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-17
+* notice: last 14d: unq all: 16 61
+* notice: prev accum: outdated-unq outdated-all / unq all: 524 840 / 563 899
+* notice: next accum: outdated-unq outdated-all / unq all: 524 840 / 565 901
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2023-07-17]
+
 2023-07-17T01:50:43Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5570956608 # 996
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-17
